--- a/maven-archetype-quickstart/pom.xml
+++ b/maven-archetype-quickstart/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>1</groupId>
-  <artifactId>1</artifactId>
-  <version>1</version>
+  <groupId>org.apache.maven.archetypes</groupId>
+  <artifactId>maven-archetype-quickstart</artifactId>
+  <version>1.4</version>
 
-  <name>1</name>
+  <name>maven-archetype-quickstart</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
