--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
     stage('maven install') {
       steps {
-        withMaven(globalMavenSettingsConfig: 'null', jdk: 'null', maven: 'null', mavenSettingsConfig: 'null') {
+        withMaven(maven: 'maven3') {
       sh 'mvn clean install'
   }
       }
