--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
     stage('maven install') {
       steps {
-        withMaven(maven: 'maven3') {
+        withMaven(globalMavenSettingsConfig: maven: 'Maven3') {
       sh 'mvn clean install'
   }
       }
