--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
     stage('maven install') {
       steps {
-        withMaven(globalMavenSettingsConfig:maven: 'Maven3') {
+        withMaven(globalMavenSettingsConfig: 'null', jdk: 'null', maven: 'Maven3', mavenSettingsConfig: 'null') {
       sh 'mvn clean install'
   }
       }
