--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -1,9 +1,12 @@
 pipeline {
     agent any
+    tools {
+        jdk 'oracle-7u80'
+    }
     stages {
     stage('maven install') {
       steps {
-        withMaven(globalMavenSettingsConfig: 'null', jdk: 'null', maven: 'Maven3', mavenSettingsConfig: 'null') {
+        withMaven(maven: 'Maven3') {
       sh 'mvn clean install'
   }
       }
