--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stages {
     stage('maven install') {
       steps {
-        withMaven(maven: 'Maven3') {
+        withMaven(maven: 'maven3') {
       sh 'mvn clean install'
   }
       }
