--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -8,9 +8,9 @@ pipeline {
     stages {
     stage('maven install') {
       steps {
-        withMaven(maven: 'maven3') {
-      sh 'mvn clean install'
-  }
+        withMaven(globalMavenSettingsConfig: 'null', jdk: 'oracle-7u80', maven: 'Maven3', mavenSettingsConfig: 'null') {
+        sh 'mvn clean install'
+}
       }
     }
 
