--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stages {
     stage('maven install') {
       steps {
-        withMaven(globalMavenSettingsConfig: 'null', jdk: 'oracle-7u80', maven: 'Maven3', mavenSettingsConfig: 'null') {
+        withMaven(jdk: 'oracle-7u80', maven: 'Maven3') {
         sh 'mvn clean install'
 }
       }
