--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -1,16 +1,13 @@
 pipeline {
     agent {
-      label 'linux'
-    }
-    tools {
-        jdk 'oracle-7u80'
+      label 'test5linux'
     }
     
     stages {
     stage('maven install') {
       steps {
-        withMaven(jdk: 'oracle-7u80', maven: 'Maven3') {
-        sh 'mvn -f my-app/pom.xml clean install'
+        withMaven(maven: 'Maven3') {
+        sh 'mvn clean install'
 }
       }
     }
