--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     stage('maven install') {
       steps {
         withMaven(maven: 'Maven3') {
-        sh 'mvn clean install'
+        sh 'mvn clean --file *.pom install'
 }
       }
     }
