--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -7,7 +7,11 @@ pipeline {
     stage('maven install') {
       steps {
         withMaven(maven: 'Maven3') {
-        sh 'mvn clean --file pom.xml install'
+        sh 'mvn clean install'
+            def pom = readMavenPom file:'pom.xml'
+
+                print pom.version
+                env.version = pom.version
 }
       }
     }
