--- a/my-app/Jenkinsfile
+++ b/my-app/Jenkinsfile
@@ -4,16 +4,16 @@ pipeline {
     }
     
     stages {
-    stage('maven install') {
-      steps {
-        withMaven(maven: 'Maven3') {
-        sh 'mvn clean install'
-            def pom = readMavenPom file:'pom.xml'
+    stage('Build') {
+
+            **dir('project-dir') {**
+                sh 'mvn clean install'
+
+                def pom = readMavenPom file:'pom.xml'
 
                 print pom.version
                 env.version = pom.version
-}
-      }
+            }
     }
 
   }
