--- a/pom.xml
+++ b/pom.xml
@@ -10,22 +10,41 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
+<!--  <build>-->
+<!--  <plugins>-->
+<!--    <plugin>-->
+<!--      <artifactId>maven-assembly-plugin</artifactId>-->
+<!--      <configuration>-->
+<!--        <archive>-->
+<!--          <manifest>-->
+<!--            <mainClass>classes.com.mycompany.app</mainClass>-->
+<!--          </manifest>-->
+<!--        </archive>-->
+<!--        <descriptorRefs>-->
+<!--          <descriptorRef>jar-with-dependencies</descriptorRef>-->
+<!--        </descriptorRefs>-->
+<!--      </configuration>-->
+<!--    </plugin>-->
+<!--  </plugins>-->
+<!--  </build>-->
   <build>
-  <plugins>
-    <plugin>
-      <artifactId>maven-assembly-plugin</artifactId>
-      <configuration>
-        <archive>
-          <manifest>
-            <mainClass>classes.com.mycompany.app</mainClass>
-          </manifest>
-        </archive>
-        <descriptorRefs>
-          <descriptorRef>jar-with-dependencies</descriptorRef>
-        </descriptorRefs>
-      </configuration>
-    </plugin>
-  </plugins>
+    <plugins>
+      <plugin>
+        <!-- Build an executable JAR -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+              <mainClass>com.mycompany.app.App</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
   <dependencies>
     <dependency>
